[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
numpy = "^1.24"
scipy = "^1.10"
matplotlib = "^3.7"
jupyter = "^1.0"
scikit-learn = "<1.8"
graspologic = {version = ">=3.4,<3.5", python = ">=3.10,<3.13"}
gcsfs = "^2025.12.0"
dotenv = "^0.9.9"
pyarrow = "^22.0.0"
ipysigma = "^0.24.6"
plotly = "^6.5.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# NOTE: graph-tool must be installed separately via conda:
# conda install -c conda-forge graph-tool
